Checkstylen mukaisia muutoksia, omien tietorakenteiden käyttöönottoa